# azure-devops-pipeline-python

./: .gitignore  Dockerfile  LICENSE  README.md  azure-pipelines.yml  install-build.py  main.py  pyproject.toml
app/: __init__.py  routes.py
k8s/: python-demo-api.yml
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/aks-cluster/: outputs.tf  variables.tf
tests/: test_routes.py
