[tool.poetry]
name = "python-demo-api"
version = "0.1.0"
description = "A Python/FastAPI demo api providing"
authors = ["david-gimelle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"